[package]
name = "flockers"
version = "0.2.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>", 
    "Alessia Antelmi <aantelmi@unisa.it>", 
    "Matteo D'Auria <matdauria@unisa.it>", 
    "Daniele De Vinco <danieledevinco1996@gmail.com", 
    "Francesco Foglia <frafonia@gmail.com>", 
    "Pasquale Caramante <pasqcaramante@gmail.com>", 
    "Luca Postiglione <lucapostiglione10@gmail.com>", 
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ab = { path="path/to/local/rust-ab"}

[features]
parallel = ["rust-ab/parallel"]
visualization = ["rust-ab/visualization"]
visualization_wasm = ["rust-ab/visualization_wasm"]



[[bin]]
name = "1000agenti"
path = "src/main1.rs"

[[bin]]
name = "2000agenti"
path = "src/main2.rs"

[[bin]]
name = "4000agenti"
path = "src/main3.rs"

[[bin]]
name = "8000agenti"
path = "src/main4.rs"

[[bin]]
name = "16000agenti"
path = "src/main5.rs"

[[bin]]
name = "32000agenti"
path = "src/main6.rs"

[[bin]]
name = "64000agenti"
path = "src/main7.rs"

[[bin]]
name = "128000agenti"
path = "src/main8.rs"